--- a/vignettes/original/_propensity_scores.Rmd
+++ b/vignettes/original/_propensity_scores.Rmd
@@ -10,10 +10,21 @@ bibliography: references.bib
 link-citations: yes
 ---
 
+```{r setup, echo = FALSE, message = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.width = 8,
+  fig.height = 4,
+  fig.align = "center",
+  messages = FALSE,
+  warnings = FALSE
+)
+output_hook <- knitr::knit_hooks$get("output")
+output_null <- function(x, options) return(NULL)
+```
 
-
-
-```r
+```{r load, message=FALSE}
 library(psborrow2)
 ```
 
@@ -30,8 +41,7 @@ weights with a number of different methods, such as generalized boosted modeling
 In addition, weights can be calculated differently for different estimands. Here, we specifying
 `estimand = "ATT"`, to calculate weights for estimating the average treatment effect among the treated (ATT).
 
-
-```r
+```{r WeightIt}
 library(WeightIt)
 
 example_dataframe <- as.data.frame(example_matrix)
@@ -43,34 +53,7 @@ weightit_model <- weightit(
   method = "gbm",
   estimand = "ATT"
 )
-#> Warning: No `criterion` was provided. Using "smd.mean"FALSETRUE.
 summary(weightit_model)
-#>                  Summary of weights
-#> 
-#> - Weight ranges:
-#> 
-#>            Min                                  Max
-#> treated 1.0000      ||                       1.0000
-#> control 0.0826 |---------------------------| 5.8966
-#> 
-#> - Units with the 5 most extreme weights by group:
-#>                                            
-#>               5      4      3      2      1
-#>  treated      1      1      1      1      1
-#>             195    158    465    438    371
-#>  control 2.7924 2.7924 5.8966 5.8966 5.8966
-#> 
-#> - Weight statistics:
-#> 
-#>         Coef of Var  MAD Entropy # Zeros
-#> treated       0.000 0.00     0.0       0
-#> control       1.582 0.82     0.6       0
-#> 
-#> - Effective Sample Sizes:
-#> 
-#>            Control Treated
-#> Unweighted  350.       150
-#> Weighted    100.09     150
 ```
 
 Another useful package is [cobalt](https://cran.r-project.org/package=cobalt), which provides tools for
@@ -78,37 +61,24 @@ assessing balance between groups after weighting or matching. It is compatible w
 See the [vignette](https://cran.r-project.org/web/packages/cobalt/vignettes/cobalt.html) for more details.
 We can use the `cobalt` package to assess balance with `bal.plot()`.
 
-
-```r
+```{r balplot}
 library(cobalt)
-#>  cobalt (Version 4.5.1, Build Date: 2023-04-27)
 bal.plot(weightit_model)
-#> No `var.name` was provided. Displaying balance for prop.score.
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-propensity_scores-balplot-1.png" alt="plot of chunk balplot"  />
-<p class="caption">plot of chunk balplot</p>
-</div>
 
 "Love plots" can also be generated that compare the populations before and after weighting:
 
-
-```r
+```{r loveplot}
 love.plot(weightit_model, stars = "std")
 ```
 
-<div class="figure" style="text-align: center">
-<img src="figure-propensity_scores-loveplot-1.png" alt="plot of chunk loveplot"  />
-<p class="caption">plot of chunk loveplot</p>
-</div>
-
 The PS values can be copied into the data set and the analysis object can be constructed as before.
 
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r}
 example_dataframe$att <- weightit_model$weights
 
 example_matrix_att <- create_data_matrix(
@@ -130,7 +100,9 @@ analysis_att <- create_analysis_obj(
 result_att <- mcmc_sample(analysis_att, seed = 123)
 ```
 
-
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
+```
 
 ## Matching with `MatchIt`
 
@@ -140,108 +112,31 @@ A variety of matching methods, including PS matching are implemented in the
 As described in the [Getting Started vignette](https://cran.r-project.org/web/packages/MatchIt/vignettes/MatchIt.html),
 it can be useful to check the imbalance before matching.
 
-
-```r
+```{r matchit}
 library(MatchIt)
-#> 
-#> Attaching package: 'MatchIt'
-#> The following object is masked from 'package:cobalt':
-#> 
-#>     lalonde
 # No matching; constructing a pre-match matchit object
 no_match <- matchit(trt ~ cov1 + cov2 + cov3 + cov4,
   data = example_dataframe,
   method = NULL, distance = "glm"
 )
 summary(no_match)
-#> 
-#> Call:
-#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe, 
-#>     method = NULL, distance = "glm")
-#> 
-#> Summary of Balance for All Data:
-#>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
-#> distance        0.2898        0.1776          0.7585     1.5831    0.2328
-#> cov1            0.6300        0.7150         -0.1761          .    0.0850
-#> cov2            0.3700        0.4625         -0.1916          .    0.0925
-#> cov3            0.7600        0.4475          0.7317          .    0.3125
-#> cov4            0.4600        0.2250          0.4715          .    0.2350
-#>          eCDF Max
-#> distance   0.3375
-#> cov1       0.0850
-#> cov2       0.0925
-#> cov3       0.3125
-#> cov4       0.2350
-#> 
-#> Sample Sizes:
-#>           Control Treated
-#> All           400     100
-#> Matched       400     100
-#> Unmatched       0       0
-#> Discarded       0       0
 ```
 
 Here we are matching treated to untreated to select the most comparable control group, regardless of whether they are
 internal or external. For simplicity let's try a 1:1 nearest matching approach.
 
-
-```r
+```{r matchit11}
 match_11 <- matchit(trt ~ cov1 + cov2 + cov3 + cov4,
   data = example_dataframe,
   method = "nearest", distance = "glm"
 )
 summary(match_11)
-#> 
-#> Call:
-#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe, 
-#>     method = "nearest", distance = "glm")
-#> 
-#> Summary of Balance for All Data:
-#>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
-#> distance        0.2898        0.1776          0.7585     1.5831    0.2328
-#> cov1            0.6300        0.7150         -0.1761          .    0.0850
-#> cov2            0.3700        0.4625         -0.1916          .    0.0925
-#> cov3            0.7600        0.4475          0.7317          .    0.3125
-#> cov4            0.4600        0.2250          0.4715          .    0.2350
-#>          eCDF Max
-#> distance   0.3375
-#> cov1       0.0850
-#> cov2       0.0925
-#> cov3       0.3125
-#> cov4       0.2350
-#> 
-#> Summary of Balance for Matched Data:
-#>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
-#> distance        0.2898        0.2845          0.0355     1.1082    0.0075
-#> cov1            0.6300        0.6800         -0.1036          .    0.0500
-#> cov2            0.3700        0.3900         -0.0414          .    0.0200
-#> cov3            0.7600        0.7600          0.0000          .    0.0000
-#> cov4            0.4600        0.4600          0.0000          .    0.0000
-#>          eCDF Max Std. Pair Dist.
-#> distance     0.07          0.0355
-#> cov1         0.05          0.1036
-#> cov2         0.02          0.1243
-#> cov3         0.00          0.0000
-#> cov4         0.00          0.0000
-#> 
-#> Sample Sizes:
-#>           Control Treated
-#> All           400     100
-#> Matched       100     100
-#> Unmatched     300       0
-#> Discarded       0       0
 ```
 
-
-```r
+```{r matchit_jitter}
 set.seed(123)
 plot(match_11, type = "jitter", interactive = FALSE)
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-propensity_scores-matchit_jitter-1.png" alt="plot of chunk matchit_jitter"  />
-<p class="caption">plot of chunk matchit_jitter</p>
-</div>
 
 Determining whether the balance after matching is appropriate is beyond the scope of this vignette. You can read more in
 the [MatchIt Assessing Balance](https://cran.r-project.org/web/packages/MatchIt/vignettes/assessing-balance.html)
@@ -249,8 +144,7 @@ vignette. Again the `cobalt` package can be useful here.
 
 However, if you are happy with the results of the matching procedure, you can extract the data for use in `psborrow2`.
 
-
-```r
+```{r trimmed_mat}
 example_matrix_match <- create_data_matrix(
   data = example_dataframe[match_11$weights == 1, ],
   ext_flag_col = "ext",
@@ -259,10 +153,11 @@ example_matrix_match <- create_data_matrix(
 )
 ```
 
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r}
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
@@ -279,8 +174,7 @@ The models also support fixed weights on the likelihood contributions from each 
 is equivalent to fixed power prior weights. This allows for the combination of models, such as an
 IPTW + commensurate prior approach.
 
-
-```r
+```{r}
 analysis_iptw_bdb <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
@@ -297,8 +191,7 @@ result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb, seed = 123)
 We can also use weights to specify a fixed power prior model. Here we set the power parameter $\alpha = 0.1$
 for the external controls.
 
-
-```r
+```{r}
 example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, "ext"] == 1, 0.1, 1))
 
 analysis_pp01 <- create_analysis_obj(
@@ -316,8 +209,7 @@ result_pp01 <- mcmc_sample(analysis_pp01, seed = 123)
 
 For comparison, we also fit a full borrowing, a no borrowing, and a BDB model without weights.
 
-
-```r
+```{r}
 result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
@@ -351,13 +243,15 @@ result_bdb <- mcmc_sample(
   seed = 123
 )
 ```
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
 
+```
 
 
 # Comparison of Results
 
-
-```r
+```{r}
 models <- list(
   "No borrowing" = result_none,
   "Full borrowing" = result_full,
@@ -370,8 +264,7 @@ models <- list(
 ```
 
 We can use `summary()` to extract the variable of interest and specify summary statistics.
-
-```r
+```{r}
 results_table <- do.call(rbind, lapply(
   models,
   function(i) i$summary("HR_trt", c("mean", "median", "sd", "quantile2"))
@@ -379,24 +272,9 @@ results_table <- do.call(rbind, lapply(
 knitr::kable(cbind(models = names(models), results_table), digits = 3)
 ```
 
-
-
-|models         |variable |  mean| median|    sd|    q5|   q95|
-|:--------------|:--------|-----:|------:|-----:|-----:|-----:|
-|No borrowing   |HR_trt   | 0.896|  0.879| 0.179| 0.635| 1.214|
-|Full borrowing |HR_trt   | 0.387|  0.385| 0.049| 0.311| 0.471|
-|Power Prior 01 |HR_trt   | 0.633|  0.625| 0.106| 0.475| 0.819|
-|ATT Weights    |HR_trt   | 0.893|  0.884| 0.127| 0.700| 1.114|
-|IPTW + BDB     |HR_trt   | 0.893|  0.877| 0.164| 0.654| 1.186|
-|Matching 1:1   |HR_trt   | 0.796|  0.785| 0.130| 0.601| 1.028|
-|BDB            |HR_trt   | 0.873|  0.855| 0.176| 0.620| 1.190|
-
-
-
 We can extract a `draws` object from each model and plot the posterior distribution of the
 treatment hazard ratio.
-
-```r
+```{r plots, fig.height=8, fig.width=8}
 plot(density(models[[1]]$draws("HR_trt")),
   col = 1, xlim = c(0, 2), ylim = c(0, 9), lwd = 2,
   xlab = "HR_trt",
@@ -407,11 +285,6 @@ for (i in 2:7) {
 }
 legend("topright", col = seq_along(models), lty = seq_along(models), legend = names(models))
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-propensity_scores-plots-1.png" alt="plot of chunk plots"  />
-<p class="caption">plot of chunk plots</p>
-</div>
 
 Here we see no borrowing and full borrowing at the extremes and the other methods in between.
 
