--- a/vignettes/original/_simulation_study.Rmd
+++ b/vignettes/original/_simulation_study.Rmd
@@ -12,14 +12,25 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-
+```{r, echo = FALSE, message = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#",
+  fig.width = 5,
+  fig.height = 3,
+  dpi = 120,
+  fig.align = "center"
+)
+options(rmarkdown.html_vignette.check_title = FALSE)
+output_hook <- knitr::knit_hooks$get("output")
+output_null <- function(x, options) return(NULL)
+```
 
 In this vignette, you'll learn how to use `psborrow2` to create a
 simulation study with the goal of informing trial design. Let's
 load `psborrow2` to start:
 
-
-```r
+```{r setup, message = FALSE}
 library(psborrow2)
 ```
 
@@ -71,8 +82,7 @@ external to internal controls). Suppose we have a function,
 
 That is:
 
-
-```{.r .fold-hide}
+```{r class.source = "fold-hide"}
 library(simsurv)
 # function to create a single matrix
 sim_single_matrix <- function(n = 500, # n simulated pts
@@ -127,17 +137,9 @@ sim_single_matrix <- function(n = 500, # n simulated pts
 ```
 
 
-
-```r
+```{r}
 set.seed(123)
 head(sim_single_matrix(n = 500, hr = 0.5, drift_hr = 1.2))
-#      id ext trt      time status cnsr
-# [1,]  1   0   0  8.179722      1    0
-# [2,]  2   0   0  6.884286      1    0
-# [3,]  3   0   0  2.348331      1    0
-# [4,]  4   0   0 17.898011      1    0
-# [5,]  5   0   0  3.870353      1    0
-# [6,]  6   0   0  6.795403      1    0
 ```
 
 Using this function, let's simulate a list of lists of matrices with four
@@ -148,8 +150,7 @@ scenarios:
 - True HR = 0.6, drift HR = 1.5
 - True HR = 1.0, drift HR = 1.5
 
-
-```r
+```{r}
 # Seed for reproducibility
 set.seed(123)
 
@@ -177,34 +178,22 @@ my_data_list <- list(
 )
 ```
 
-There are 4 scenarios.
+There are `r NROW(my_data_list)` scenarios.
 
-
-```r
+```{r}
 NROW(my_data_list)
-# [1] 4
 ```
 
-Each scenario has 100 matrices.
+Each scenario has `r n` matrices.
 
-
-```r
+```{r}
 NROW(my_data_list[[1]])
-# [1] 100
 ```
 
 The lowest level of the list of lists is a data matrix.
 
-
-```r
+```{r}
 head(my_data_list[[1]][[1]])
-#      id ext trt      time status cnsr
-# [1,]  1   0   0  8.179722      1    0
-# [2,]  2   0   0  6.884286      1    0
-# [3,]  3   0   0  2.348331      1    0
-# [4,]  4   0   0 17.898011      1    0
-# [5,]  5   0   0  3.870353      1    0
-# [6,]  6   0   0  6.795403      1    0
 ```
 
 ### `guide`
@@ -221,11 +210,10 @@ that the external control arm experiences greater hazard than the internal
 control arm.
 * The name of a column that indexes the `data_list`
 
-In this example, the 4 scenarios are
+In this example, the `r NROW(my_data_list)` scenarios are
 summarized with the below `guide`:
 
-
-```r
+```{r}
 my_sim_data_guide <- expand.grid(
   true_hr = c(0.6, 1.0),
   drift_hr = c("No drift HR", "Moderate drift HR")
@@ -234,11 +222,6 @@ my_sim_data_guide <- expand.grid(
 my_sim_data_guide$id <- seq(1, NROW(my_sim_data_guide))
 
 my_sim_data_guide
-#   true_hr          drift_hr id
-# 1     0.6       No drift HR  1
-# 2     1.0       No drift HR  2
-# 3     0.6 Moderate drift HR  3
-# 4     1.0 Moderate drift HR  4
 ```
 
 This guide implies that `my_sim_data_guide[[1]]` is a list of
@@ -253,8 +236,7 @@ For our study, these are `"true_hr"`, `"drift_hr"`, and `"id"`.
 
 Putting it all together, we can create an object of class `SimDataList`:
 
-
-```r
+```{r}
 my_sim_data_list <- sim_data_list(
   data_list = my_data_list,
   guide = my_sim_data_guide,
@@ -264,12 +246,6 @@ my_sim_data_list <- sim_data_list(
 )
 
 my_sim_data_list
-# SimDataList object with  4  different scenarios
-#   true_hr          drift_hr id n_datasets_per_param
-# 1     0.6       No drift HR  1                  100
-# 2     1.0       No drift HR  2                  100
-# 3     0.6 Moderate drift HR  3                  100
-# 4     1.0 Moderate drift HR  4                  100
 ```
 
 ## `outcome`
@@ -279,8 +255,7 @@ either a single `Outcome` class object (e.g., as produced by `outcome_surv_expon
 or a list of `Outcome` class objects passed to `sim_outcome_list()`. For our
 example, let's just use a single exponential distribution.
 
-
-```r
+```{r}
 my_sim_out <- outcome_surv_exponential(
   time_var = "time",
   cens_var = "cnsr",
@@ -288,18 +263,6 @@ my_sim_out <- outcome_surv_exponential(
 )
 
 my_sim_out
-# Outcome object with class OutcomeSurvExponential 
-# 
-# Outcome variables:
-# time_var cens_var 
-#   "time"   "cnsr" 
-# 
-# Baseline prior:
-# Normal Distribution
-# Parameters:
-#  Stan  R    Value
-#  mu    mean    0 
-#  sigma sd   1000
 ```
 
 ## `borrowing`
@@ -318,8 +281,7 @@ How do we specify that we want to evaluate multiple borrowing methods?
 We'll use a special list of `Borrowing` objects,
 which we'll create through the function `sim_borrowing_list()`.
 
-
-```r
+```{r}
 my_borrowing_list <- sim_borrowing_list(
   list(
     "No borrowing" = borrowing_details("No borrowing", "ext"),
@@ -330,12 +292,6 @@ my_borrowing_list <- sim_borrowing_list(
 )
 
 my_borrowing_list
-# SimBorrowingList object with  4  different scenario(s)
-#   borrowing_scenario
-# 1       No borrowing
-# 2     Full borrowing
-# 3 BDB - conservative
-# 4   BDB - aggressive
 ```
 
 ## `covariate`
@@ -353,21 +309,10 @@ As with other inputs, this can be a single instance of a class `Treatment`,
 or a list of these classes, created with `sim_treatment_list()`. Let's
 just use a single instance:
 
-
-```r
+```{r}
 my_sim_treat <- treatment_details("trt", normal_prior(0, 1000))
 
 my_sim_treat
-# Treatment object
-# 
-# Treatment flag column: trt 
-# 
-# Treatment effect prior:
-# Normal Distribution
-# Parameters:
-#  Stan  R    Value
-#  mu    mean    0 
-#  sigma sd   1000
 ```
 
 ## `create_simulation_obj()`
@@ -378,19 +323,20 @@ ready to sample on our behalf.
 
 ***Important:*** `psborrow2` will simulate the Cartesian product of all
 unique list elements in `data_matrix_list`, `outcome`, `borrowing`,
-`covariate`, and `treatment`. We have 4 data
-generation scenarios and 4 borrowing
+`covariate`, and `treatment`. We have `r NROW(my_sim_data_guide)` data
+generation scenarios and `r NROW(my_borrowing_list@guide)` borrowing
 scenarios. The other inputs just have one scenario (or 0 for `covariate`,
 which is equivalent to one scenario). This means we should expect
-4 $\times$ 4
-$=$ 16
+`r NROW(my_sim_data_guide)` $\times$ `r NROW(my_borrowing_list@guide)`
+$=$ `r NROW(my_sim_data_guide) * NROW(my_borrowing_list@guide)`
 combinations of parameters. Let's create a simulation object of class
 `Simulation`:
 
+```{r echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r}
 simulation_obj <- create_simulation_obj(
   my_sim_data_list,
   outcome = my_sim_out,
@@ -401,7 +347,9 @@ simulation_obj <- create_simulation_obj(
 
 simulation_obj
 ```
-
+```{r echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
+```
 
 While we get a warning about the size of the simulation study, we are not worried
 because we are limiting our MCMC samples below in this example.
@@ -409,43 +357,8 @@ because we are limiting our MCMC samples below in this example.
 We can access the guide to see the specific scenarios that will be
 simulated with `show_guide()`:
 
-
-```r
+```{r}
 show_guide(simulation_obj)
-#    true_hr          drift_hr id n_datasets_per_param outcome_scenario
-# 1      0.6       No drift HR  1                  100          default
-# 2      1.0       No drift HR  2                  100          default
-# 3      0.6 Moderate drift HR  3                  100          default
-# 4      1.0 Moderate drift HR  4                  100          default
-# 5      0.6       No drift HR  1                  100          default
-# 6      1.0       No drift HR  2                  100          default
-# 7      0.6 Moderate drift HR  3                  100          default
-# 8      1.0 Moderate drift HR  4                  100          default
-# 9      0.6       No drift HR  1                  100          default
-# 10     1.0       No drift HR  2                  100          default
-# 11     0.6 Moderate drift HR  3                  100          default
-# 12     1.0 Moderate drift HR  4                  100          default
-# 13     0.6       No drift HR  1                  100          default
-# 14     1.0       No drift HR  2                  100          default
-# 15     0.6 Moderate drift HR  3                  100          default
-# 16     1.0 Moderate drift HR  4                  100          default
-#    borrowing_scenario covariate_scenario treatment_scenario
-# 1        No borrowing      No adjustment            default
-# 2        No borrowing      No adjustment            default
-# 3        No borrowing      No adjustment            default
-# 4        No borrowing      No adjustment            default
-# 5      Full borrowing      No adjustment            default
-# 6      Full borrowing      No adjustment            default
-# 7      Full borrowing      No adjustment            default
-# 8      Full borrowing      No adjustment            default
-# 9  BDB - conservative      No adjustment            default
-# 10 BDB - conservative      No adjustment            default
-# 11 BDB - conservative      No adjustment            default
-# 12 BDB - conservative      No adjustment            default
-# 13   BDB - aggressive      No adjustment            default
-# 14   BDB - aggressive      No adjustment            default
-# 15   BDB - aggressive      No adjustment            default
-# 16   BDB - aggressive      No adjustment            default
 ```
 
 ## `mcmc_sample()`
@@ -459,10 +372,11 @@ specifies the quantiles for null coverage and true coverage. For instance,
 95% credible coverage would be estimated with
 `posterior_quantiles = c(0.025, 0.975)`, the default argument.
 
+```{r echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r}
 simulation_res <- mcmc_sample(
   simulation_obj,
   posterior_quantiles = c(0.025, 0.975),
@@ -473,56 +387,31 @@ simulation_res <- mcmc_sample(
 )
 ```
 
-
+```{r echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
+```
 
 ***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
 return a `CmdStanModel` object when applied to a simulation study object.
 Instead, it returns a class unique to simulation study results:
 `MCMCSimulationResult`.
 
-
-```r
+```{r}
 class(simulation_res)
-# [1] "MCMCSimulationResult"
-# attr(,"package")
-# [1] "psborrow2"
 ```
 
 Let's look at the performance of our simulation study by extracting the data.frame
 that summarizes results, `get_results()`:
 
-
-```r
+```{r}
 simulation_res_df <- get_results(simulation_res)
 head(simulation_res_df)
-#   true_hr          drift_hr id n_datasets_per_param outcome_scenario
-# 1     0.6       No drift HR  1                  100          default
-# 2     1.0       No drift HR  2                  100          default
-# 3     0.6 Moderate drift HR  3                  100          default
-# 4     1.0 Moderate drift HR  4                  100          default
-# 5     0.6       No drift HR  1                  100          default
-# 6     1.0       No drift HR  2                  100          default
-#   borrowing_scenario covariate_scenario treatment_scenario   mse_mean
-# 1       No borrowing      No adjustment            default 0.05915273
-# 2       No borrowing      No adjustment            default 0.13032971
-# 3       No borrowing      No adjustment            default 0.04724394
-# 4       No borrowing      No adjustment            default 0.13079915
-# 5     Full borrowing      No adjustment            default 0.02027734
-# 6     Full borrowing      No adjustment            default 0.05067948
-#    bias_mean null_coverage true_coverage
-# 1 0.06270199          0.58          0.96
-# 2 0.03916893          0.96          0.96
-# 3 0.01524864          0.44          0.96
-# 4 0.03571795          0.95          0.95
-# 5 0.02150292          0.10          0.96
-# 6 0.01040672          0.97          0.97
 ```
 
 Let's quickly visualize the results using `ggplot2`. We will first
 load `ggplot2` and factorize our borrowing scenarios:
 
-
-```r
+```{r}
 # Load ggplot2
 library(ggplot2)
 
@@ -539,8 +428,7 @@ simulation_res_df$borrowing_scenario <- factor(simulation_res_df$borrowing_scena
 
 ### MSE
 
-
-```{.r .fold-hide}
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
 ggplot(simulation_res_df) +
   geom_bar(aes(x = factor(true_hr), fill = borrowing_scenario, y = mse_mean),
     stat = "identity", position = "dodge"
@@ -554,18 +442,12 @@ ggplot(simulation_res_df) +
   scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75"))
 ```
 
-<div class="figure" style="text-align: center">
-<img src="figure-simulation_study-unnamed-chunk-23-1.png" alt="plot of chunk unnamed-chunk-23"  />
-<p class="caption">plot of chunk unnamed-chunk-23</p>
-</div>
-
 ### Type I error
 
 Because we included a true HR of 1.0, we can evaluate type I error by looking
 at the compliment to the true parameter coverage:
 
-
-```{.r .fold-hide}
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - true_coverage),
     stat = "identity", position = "dodge"
@@ -580,17 +462,11 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_hline(aes(yintercept = 0.05), linetype = 2)
 ```
 
-<div class="figure" style="text-align: center">
-<img src="figure-simulation_study-unnamed-chunk-24-1.png" alt="plot of chunk unnamed-chunk-24"  />
-<p class="caption">plot of chunk unnamed-chunk-24</p>
-</div>
-
 ### Power
 
 We can include power by looking at the results for our true simulation of 0.6.
 
-
-```{.r .fold-hide}
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - null_coverage),
     stat = "identity", position = "dodge"
@@ -604,8 +480,3 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   scale_y_continuous(breaks = seq(0, 1, .1), limits = c(0, 1)) +
   geom_hline(aes(yintercept = 0.80), linetype = 2)
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-simulation_study-unnamed-chunk-25-1.png" alt="plot of chunk unnamed-chunk-25"  />
-<p class="caption">plot of chunk unnamed-chunk-25</p>
-</div>
