--- a/vignettes/original/_prior_distributions.Rmd
+++ b/vignettes/original/_prior_distributions.Rmd
@@ -8,16 +8,20 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  fig.align = "center",
+  fig.width = 5,
+  fig.height = 3,
+  dpi = 120,
+  comment = "#"
+)
+options(rmarkdown.html_vignette.check_title = FALSE)
+```
 
-
-
-```r
+```{r setup}
 library(psborrow2)
-# Loading required package: cmdstanr
-# This is cmdstanr version 0.5.2
-# - CmdStanR documentation and vignettes: mc-stan.org/cmdstanr
-# - CmdStan path: /Users/secrestm/.cmdstan/cmdstan-2.33.1
-# - CmdStan version: 2.33.1
 ```
 
 
@@ -60,15 +64,9 @@ constructors below:
 For example, we can create an uninformative normal distribution by specifying
 a normal prior centered around 0 with a very large standard deviation:
 
-
-```r
+```{r}
 uninformative_normal <- normal_prior(0, 10000)
 uninformative_normal
-# Normal Distribution
-# Parameters:
-#  Stan  R    Value
-#  mu    mean     0
-#  sigma sd   10000
 ```
 
 See the documentation for the respective functions above for additional
@@ -80,15 +78,9 @@ You may sometimes find it useful to visualize prior distributions. In these
 scenarios, you can call `plot()` on the prior object to visualize the
 distribution:
 
-
-```r
+```{r}
 plot(uninformative_normal)
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-prior_distributions-unnamed-chunk-3-1.png" alt="plot of chunk unnamed-chunk-3"  />
-<p class="caption">plot of chunk unnamed-chunk-3</p>
-</div>
 
 `plot()` chooses the default axes for you, but you can change these to
 make differences more obvious. Let's compare
@@ -97,15 +89,9 @@ commensurability parameter `tau` to an more aggressive `gamma(1, 0.001)`
 distribution with greater density at higher values of `tau` (which
 will lead to more borrowing in a BDB analysis):
 
-
-```r
+```{r}
 conservative_tau <- gamma_prior(0.001, 0.001)
 aggressive_tau <- gamma_prior(1, 0.001)
 plot(aggressive_tau, xlim = c(0, 2000), col = "blue", ylim = c(0, 1e-03))
 plot(conservative_tau, xlim = c(0, 2000), col = "red", add = TRUE)
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-prior_distributions-unnamed-chunk-4-1.png" alt="plot of chunk unnamed-chunk-4"  />
-<p class="caption">plot of chunk unnamed-chunk-4</p>
-</div>
