--- a/vignettes/original/_weighting.Rmd
+++ b/vignettes/original/_weighting.Rmd
@@ -13,7 +13,19 @@ editor_options:
   chunk_output_type: console
 ---
 
-
+```{r knitr, echo = FALSE, message = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  fig.align = "center",
+  fig.width = 5,
+  fig.height = 3,
+  dpi = 120,
+  comment = "#"
+)
+options(rmarkdown.html_vignette.check_title = FALSE)
+output_hook <- knitr::knit_hooks$get("output")
+output_null <- function(x, options) return(NULL)
+```
 
 # Introduction
 
@@ -24,8 +36,7 @@ This vignette will show how weights can be specified and compare regression mode
 We will compare a `glm` model with weights, a weighted likelihood in Stan with `psborrow2`, and
 `BayesPPD::glm.fixed.a0` for generalized linear models with fixed `a0` (power prior parameter).
 
-
-```r
+```{r packages, results = "hide", message = FALSE}
 library(psborrow2)
 library(BayesPPD)
 library(ggplot2)
@@ -39,10 +50,11 @@ The model has a treatment indicator and two covariates, `resp ~ trt + cov1 + cov
 
 ### glm
 
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r glm_logistic, message = FALSE, warning = FALSE}
 logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_glm <- glm(
     resp ~ trt + cov1 + cov2,
@@ -65,8 +77,7 @@ logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 
 ### BayesPPD
 
-
-```r
+```{r bayesppd_logistic}
 logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_ppd <- glm.fixed.a0(
     data.type = "Bernoulli",
@@ -99,8 +110,7 @@ logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 ### psborrow2
 
 
-
-```r
+```{r psb2_logistic}
 logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_psb2 <- create_analysis_obj(
     data_matrix = as.matrix(cbind(
@@ -139,12 +149,13 @@ logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
 
-
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
+```
 
 ### Results
 
-
-```r
+```{r logistic_results}
 logistic_res_df <- do.call(
   rbind,
   c(logistic_glm_reslist, logistic_ppd_reslist, logistic_psb_reslist)
@@ -165,35 +176,7 @@ new_order <- order(wide$variable, wide$borrowing)
 knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 ```
 
-
-
-| borrowing|variable    |est_ci.glm              |est_ci.BayesPPD         |est_ci.psborrow2        |
-|---------:|:-----------|:-----------------------|:-----------------------|:-----------------------|
-|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.659 (-0.040, 1.384)   |0.666 (-0.044, 1.384)   |
-|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.406 (-0.122, 0.941)   |0.404 (-0.129, 0.950)   |
-|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.301 (-0.159, 0.754)   |0.301 (-0.147, 0.746)   |
-|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.234 (-0.163, 0.637)   |0.239 (-0.165, 0.643)   |
-|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.192 (-0.166, 0.560)   |0.200 (-0.165, 0.570)   |
-|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.783 (-1.489, -0.100) |-0.794 (-1.474, -0.111) |
-|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.799 (-1.362, -0.246) |-0.795 (-1.356, -0.246) |
-|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.784 (-1.276, -0.307) |-0.782 (-1.270, -0.310) |
-|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.761 (-1.197, -0.338) |-0.769 (-1.201, -0.328) |
-|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.749 (-1.146, -0.360) |-0.757 (-1.147, -0.366) |
-|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.754 (-1.506, -0.016) |-0.751 (-1.491, -0.021) |
-|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.570 (-1.120, -0.016) |-0.567 (-1.126, -0.024) |
-|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.463 (-0.941, 0.008)  |-0.464 (-0.930, -0.006) |
-|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.401 (-0.813, 0.008)  |-0.403 (-0.816, 0.011)  |
-|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.359 (-0.725, 0.011)  |-0.359 (-0.731, 0.006)  |
-|      0.00|trt         |0.154 (-0.558, 0.871)   |0.156 (-0.561, 0.886)   |0.155 (-0.574, 0.885)   |
-|      0.25|trt         |0.349 (-0.183, 0.885)   |0.352 (-0.188, 0.880)   |0.353 (-0.197, 0.887)   |
-|      0.50|trt         |0.405 (-0.082, 0.894)   |0.408 (-0.077, 0.886)   |0.410 (-0.079, 0.889)   |
-|      0.75|trt         |0.434 (-0.031, 0.900)   |0.440 (-0.025, 0.902)   |0.440 (-0.028, 0.911)   |
-|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.010, 0.916)    |0.456 (-0.000, 0.909)   |
-
-
-
-
-```r
+```{r logistic_plot}
 logistic_res_df$borrowing_x <- logistic_res_df$borrowing +
   (as.numeric(factor(logistic_res_df$fitter)) - 3) / 100
 
@@ -203,11 +186,6 @@ ggplot(logistic_res_df, aes(x = borrowing_x, y = estimate, group = fitter, colou
   facet_wrap(~variable, scales = "free")
 ```
 
-<div class="figure" style="text-align: center">
-<img src="figure-weighting-logistic_plot-1.png" alt="plot of chunk logistic_plot"  />
-<p class="caption">plot of chunk logistic_plot</p>
-</div>
-
 # Exponential models
 
 Now we fit models with an exponentially distributed outcome. There is no censoring in this data set.
@@ -216,8 +194,7 @@ As before, the external control arm having weights (or power parameters)
 equal to 0, 0.25, 0.5, 0.75, 1. The internal treated and control patients have weight = 1.
 The model has a treatment indicator and two covariates, `eventtime ~ trt + cov1 + cov2`.
 
-
-```r
+```{r surv_data}
 set.seed(123)
 sim_data_exp <- cbind(
   simsurv::simsurv(
@@ -230,21 +207,12 @@ sim_data_exp <- cbind(
   censor = 0
 )
 ```
-
-```r
+```{r}
 head(sim_data_exp)
-#   id  eventtime status trt cov1 cov2 ext censor
-# 1  1 0.14802638      1   0    0    1   0      0
-# 2  2 0.05065174      1   0    1    0   0      0
-# 3  3 0.01727805      1   0    1    0   0      0
-# 4  4 0.13168620      1   0    1    0   0      0
-# 5  5 0.07740706      1   0    0    0   0      0
-# 6  6 0.04999778      1   0    1    0   0      0
 ```
 
 
-
-```r
+```{r glm_exp}
 ## glm
 glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   exp_glm <- glm(
@@ -269,8 +237,7 @@ glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
 
-
-```r
+```{r bayesppd_Exp}
 ## BayesPPD
 ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   exp_ppd <- glm.fixed.a0(
@@ -301,10 +268,11 @@ ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
 
+```{r, echo = FALSE}
+knitr::knit_hooks$set(output = output_null)
+```
 
-
-
-```r
+```{r psborrow2_Exp}
 ## psborrow2
 psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   exp_psb2 <- create_analysis_obj(
@@ -341,8 +309,7 @@ psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
   
-
-```r
+```{r}
 knitr::knit_hooks$set(output = output_hook)
 ```
 
@@ -350,8 +317,7 @@ knitr::knit_hooks$set(output = output_hook)
 
 Note: Wald confidence intervals are displayed here for `glm` for the exponential models.
 
-
-```r
+```{r exp_results}
 res_df <- do.call(rbind, c(glm_reslist, ppd_reslist, psb_reslist))
 
 res_df$est_ci <- sprintf(
@@ -369,35 +335,7 @@ new_order <- order(wide$variable, wide$borrowing)
 knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 ```
 
-
-
-| borrowing|variable    |est_ci.glm             |est_ci.BayesPPD        |est_ci.psborrow2       |
-|---------:|:-----------|:----------------------|:----------------------|:----------------------|
-|      0.00|(Intercept) |1.930 (1.597, 2.263)   |1.913 (1.573, 2.225)   |1.916 (1.586, 2.235)   |
-|      0.25|(Intercept) |1.581 (1.323, 1.838)   |1.576 (1.313, 1.837)   |1.574 (1.318, 1.819)   |
-|      0.50|(Intercept) |1.473 (1.251, 1.695)   |1.472 (1.245, 1.686)   |1.466 (1.237, 1.679)   |
-|      0.75|(Intercept) |1.414 (1.215, 1.613)   |1.409 (1.211, 1.603)   |1.409 (1.207, 1.602)   |
-|      1.00|(Intercept) |1.376 (1.194, 1.558)   |1.375 (1.191, 1.552)   |1.373 (1.189, 1.550)   |
-|      0.00|cov1        |0.630 (0.300, 0.959)   |0.631 (0.304, 0.967)   |0.634 (0.315, 0.959)   |
-|      0.25|cov1        |0.722 (0.453, 0.991)   |0.722 (0.445, 0.997)   |0.725 (0.461, 0.991)   |
-|      0.50|cov1        |0.786 (0.552, 1.020)   |0.781 (0.549, 1.021)   |0.789 (0.557, 1.031)   |
-|      0.75|cov1        |0.827 (0.616, 1.037)   |0.827 (0.622, 1.034)   |0.827 (0.618, 1.037)   |
-|      1.00|cov1        |0.854 (0.662, 1.046)   |0.853 (0.659, 1.046)   |0.855 (0.666, 1.051)   |
-|      0.00|cov2        |0.043 (-0.309, 0.395)  |0.041 (-0.316, 0.382)  |0.037 (-0.321, 0.377)  |
-|      0.25|cov2        |-0.009 (-0.273, 0.255) |-0.013 (-0.283, 0.249) |-0.011 (-0.274, 0.256) |
-|      0.50|cov2        |0.009 (-0.213, 0.232)  |0.008 (-0.220, 0.226)  |0.008 (-0.212, 0.233)  |
-|      0.75|cov2        |0.023 (-0.173, 0.220)  |0.025 (-0.173, 0.219)  |0.025 (-0.170, 0.221)  |
-|      1.00|cov2        |0.033 (-0.144, 0.211)  |0.033 (-0.145, 0.212)  |0.033 (-0.145, 0.211)  |
-|      0.00|trt         |1.256 (0.911, 1.601)   |1.261 (0.920, 1.615)   |1.256 (0.904, 1.605)   |
-|      0.25|trt         |1.564 (1.306, 1.822)   |1.562 (1.305, 1.807)   |1.561 (1.303, 1.814)   |
-|      0.50|trt         |1.622 (1.386, 1.859)   |1.620 (1.378, 1.857)   |1.619 (1.378, 1.856)   |
-|      0.75|trt         |1.649 (1.422, 1.875)   |1.646 (1.416, 1.866)   |1.646 (1.420, 1.867)   |
-|      1.00|trt         |1.664 (1.443, 1.884)   |1.658 (1.439, 1.877)   |1.658 (1.436, 1.876)   |
-
-
-
-
-```r
+```{r exp_plot}
 res_df$borrowing_x <- res_df$borrowing +
   (as.numeric(factor(res_df$fitter)) - 3) / 100
 
@@ -406,8 +344,3 @@ ggplot(res_df, aes(x = borrowing_x, y = estimate, group = fitter, colour = fitte
   geom_point() +
   facet_wrap(~variable, scales = "free")
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figure-weighting-exp_plot-1.png" alt="plot of chunk exp_plot"  />
-<p class="caption">plot of chunk exp_plot</p>
-</div>
